--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -2,7 +2,7 @@ name: "Quality Checks"
 on:
   pull_request:
   push:
-    branches: ["master", "test_actions"]
+    branches: ["master"]
 
 jobs:
   build:
